<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1">
		<TextView android:layout_width="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_height="wrap_content" android:id="@+id/textView1"
			android:text="@string/coordinates"></TextView>
		<TextView android:text="Latitude" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/lat" />
		<TextView android:text="Longitude" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/longi" />
		<TextView android:layout_width="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_height="wrap_content" android:id="@+id/textView2"
			android:text="@string/name"></TextView>
		<EditText android:id="@+id/placename" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:hint="@string/place_name_popup_field"  android:singleLine="true" android:imeOptions="actionNext"/>
		<TextView android:layout_width="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_height="wrap_content" android:id="@+id/textView3"
			android:text="@string/mode"></TextView>
		<RadioGroup android:layout_width="fill_parent" android:id="@+id/radioGroup1"
			android:layout_height="wrap_content">
			<RadioButton android:id="@+id/radio0"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:checked="true" android:text="@string/vibrate_mode"></RadioButton>
			<RadioButton android:id="@+id/radio1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/silent_mode"></RadioButton>
			<RadioButton android:id="@+id/radio2"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/normal_mode"></RadioButton>
		</RadioGroup>
		<CheckBox android:text="@string/mute_multimedia" android:id="@+id/mute_multimedia_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
		<TextView android:layout_width="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_height="wrap_content" android:id="@+id/textView4"
			android:text="@string/radius"></TextView>
		<EditText android:inputType="number" android:id="@+id/radius"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="50" />
	</LinearLayout>
</ScrollView>